2008-10-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_set_parent_window):
	Store the menu's parent window.

	* src/hildon-stackable-window.c
	(hildon_stackable_window_toggle_menu)
	(hildon_stackable_window_finalize):
	Set the menu's parent window when the menu is shown, unset it when
	it is destroyed.

	* src/hildon-app-menu.c
	(hildon_app_menu_hide_idle, hildon_app_menu_key_press)
	(hildon_app_menu_class_init):
	Send unhandled keyboard accelerators to the parent window.

2008-10-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_finalize): Unref the menu, don't destroy it

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* NEWS: Updates
	* configure.ac: Bump version
	* debian/changelog: Updates
	* debian/rules: Set PKG_CONFIG_PATH to make docs build with
	gtk-doc 1.10.

2008-10-20  Alberto Garcia  <agarcia@igalia.com>

	Patch contributed by Daniel Borgmann (danielb@openismus.com)

	* src/hildon-gtk.h
	* src/hildon-gtk.c (hildon_gtk_menu_new): New function to create a
	GtkMenu with Hildon style.

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c:
	(hildon_picker_button_set_done_button_text): Set the dialog's
	done button text here as well.

	Fixes NB#90232 (Picker button does not set the label on done button
	for the second time)

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_clicked): Update
	warning message.

2008-10-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_insert)
	(hildon_app_menu_add_filter, can_activate_accel): Allow items in
	the HildonAppMenu to be activatable using keyboard accelerators
	when the menu is not being shown.
